fix: add padding to player selection heading on mobile

--- a/src/components/PlayerSelection/PlayerSelection.module.css
+++ b/src/components/PlayerSelection/PlayerSelection.module.css
@@ -23,6 +23,10 @@
   gap: 0.3rem;
   min-height: 3.3rem;
 
+  @media (max-width: 576px) {
+    padding-right: 1.2rem;
+  }
+
   & .headings__name,
   & .headings__warning {
     margin: 0;
